<resources>
    <string name="app_name">Rugby Union App</string>
    <string name="action_settings">Settings</string>
    <string name="team_a">scotland</string>
    <string name="team_b">usa</string>
    <string name="team_score">0</string>
    <string name="tries">try</string>
    <string name="conv">conversion</string>
    <string name="pen">penalty</string>
    <string name="drop">drop goal</string>
    <string name="pause">start</string>
    <string name="reset">reset</string>
    <string name="yellow_card">0</string>
    <string name="red_card">0</string>
</resources>
